...
"UserModuleErrorCode.NetAPIError"     = "服务器返回错误";
"UserModuleErrorCode.PhoneError"      = "手机号码错误";
"UserModuleErrorCode.EmailError"      = "邮箱格式错误";
"UserModuleErrorCode.PasswdError"     = "密码6位数或密码大于16位数";
"UserModuleErrorCode.SecurityError"   = "验证码错误";
"UserModuleErrorCode.UserNameError"   = "用户名格式错误";
"UserModuleErrorCode.PhoneNil"        = "手机号码不能为空";
"UserModuleErrorCode.EmailNil"        = "邮箱不能为空";
"UserModuleErrorCode.PasswdNil"       = "密码不能为空";
"UserModuleErrorCode.SecurityNil"     = "验证码不能为空";
"UserModuleErrorCode.UserNameNil"     = "用户名不能为空";
"UserModuleErrorCode.UserIdNil"       = "用户Id不能为空";
"UserModuleErrorCode.UnknownError"    = "未知错误";
"UserModuleErrorCode.FriendIdNil"     = "好友Id不能为空";
"UserModuleErrorCode.SearchTypeNil"   = "搜索类型不能为空";
"UserModuleErrorCode.ParaNil"         = "参数有误";
"UserModuleErrorCode.ParaError"       = "参数有误";
"UserModuleErrorCode.LBSNil"          = "LBS不能为空";
"UserModuleErrorCode.PhoneNumListNil" = "电话号码列表不能为空";
"UserModuleErrorCode.ImageParseFail"  = "图片转换失败";

// 首页
"MainPage.SignInBtn"       = "登录";
"MainPage.SignUpBtn"       = "加入豚鼠";

// 登录页面
"SignIn.SignInBtn"         = "登录";
"SignIn.UserNameTextField" = "手机/邮箱";
"SignIn.PasswdTextField"   = "密码";
"SignIn.title"             = "准备开始";
"SignIn.SignUpItemBtn"     = "注册";
"SignIn.ForgotPasswdBtn"   = "忘记了密码？";

// 注册页面
"SignUp.PhoneRightItemBtn"   = "邮箱";
"SignUp.EmailRightItemBtn"   = "手机";
"SignUp.Title"               = "加入豚鼠";
"SignUp.PhoneNumTextField"   = "手机";
"SignUp.EmailTextField"      = "邮箱";
"SignUp.SafetyCodeTextField" = "验证码";
"SignUp.SendSafetyCode"      = "发送验证码";
"SignUp.ProcotolViewTitle"   = "我们已经阅读并接受";
"SignUp.ProcotolViewBtn"     = "《豚鼠科技服务协议》";
"SignUp.SignUpBtn"           = "注册";
"SignUp.ReadProcotol"        = "请先阅读《豚鼠科技服务协议》";
"SignUp.ReSignUp"            = "重新注册";
"SignUp.DirectSinIn"         = "直接登录";

// 引导页
"Guide.MyInfo"                = "我的信息";
"Guide.Mine"                  = "我是";
"Guide.Birthday"              = "生日";
"Guide.Height"                = "身高";
"Guide.Weight"                = "体重";
"Guide.Goal"                  = "目标";
"Guide.GoalStep"              = "计步";
"Guide.GoalSleep"             = "睡眠";
"Guide.Step"                  = "步";
"Guide.Average"               = "平均";
"Guide.Recommend"             = "推荐";
...
"Guide.SafetyService.Info"  = "遇到紧急情况，连按4下按钮\n立即向联系人发送求救信息";
"Guide.LifeBand.Title"      = "豚鼠手环";
"Guide.LifeBand.Info"       = "开启我的豚鼠生活";

// 忘记密码页面
"Forgot.Title"                = "忘记密码了?";
"Forgot.PasswdTextField"      = "新密码";
"Forgot.BackTextBtn"          = "且慢,我想起来了!";
"Forgot.finish"               = "完成";

// 照相机
"Camera.Photo"                = "拍照";
"Camera.Video"                = "摄影";
"Camera.Back"                 = "取消";

...
"Home.TimeLine.PK.Lead"                = "领先";
"Home.TimeLine.PK.Back"                = "落后";
"Home.TimeLine.PK.Win"                 = "胜利了!";
"Home.TimeLine.PK.Lose"                = "失败了!";
"Home.TimeLine.Healthy.Care"           = "需要关怀";
"Home.LifeList.Title.Target"           = "目标";
"Home.LifeList.Title.InfoOpen"         = "信息公开";
"Home.LifeList.Title.Friend"           = "好友";
"Home.LifeList.Title.PK"               = "PK";
"Home.LifeList.Title.About"            = "关于";
"Home.LifeList.Title.Help"             = "帮助与反馈";
"Home.LifeList.Title.Related"          = "体感应用";
"Home.RightList.Title.Camera"          = "遥控相机";
"Home.RightList.Title.Notification"    = "来电提醒";
...
"Chart.Sleep.Degree.Light" = "浅度";
"Chart.Sleep.Average."     = "日均睡眠";
"Share.To"                 = "分享到";

//好友，联系人
"Contacts.ListCell.Cavy"               = "生活豚鼠";
"Contacts.SearchBar.Search"            = "搜索";
"Contacts.Title"                       = "联系人";
"Contacts.NewFriendsCell"              = "新的朋友";
"Contacts.AddFriendsCell"              = "添加好友";
"Contacts.SearchplaceHolder"           = "  搜索你得联系人";
"Contacts.ListCell.Delete"             = "删除";
"Contacts.ListCell.Care"               = "关注";
"Contacts.ListCell.UndoCare"           = "取消关注";
"Contacts.ListCell.Add"                = "添加";
"Contacts.ListCell.Agree"              = "同意";
"Contacts.ListCell.AlreaydAdd"         = "已发送";
"Contacts.Search.PhoneNum"             = "通讯录好友";
"Contacts.Search.RecommendNum"         = "推荐好友";
"Contacts.Search.NearbyNum"            = "附近好友";
"Contacts.Search.placeHolder"          = "  搜索新的好友";
"Contacts.Search.dropRefresh"          = "下拉换一批";
"Contacts.Request.placeHolder"         = "发送验证申请，等待对方通过";
"Contacts.Request.SendButton"          = "发送";
"Contacts.ShowInfo.city"               = "城市";
"Contacts.ShowInfo.Address"            = "地址";
"Contacts.ShowInfo.old"                = "年龄";
"Contacts.ShowInfo.Gender"             = "性别";
"Contacts.Gender.Girl"                 = "女";
"Contacts.Gender.Boy"                  = "男";
...
