...

extension UIImage {
  enum Asset: String {
    case AlarmClockAdd = "AlarmClockAdd"
    case AlarmClockEmotyIcon = "AlarmClockEmotyIcon"
    case AlarmClockNavSave = "AlarmClockNavSave"
    case Backbtn = "backbtn"
    case Banner_1 = "banner_1"
    case Banner_2 = "banner_2"
    case Banner_3 = "banner_3"
    case Banner_home = "banner_home"
    case CameraFlashAuto = "CameraFlashAuto"
    case CameraFlashClosed = "CameraFlashClosed"
...
    case GuideRightBtn = "GuideRightBtn"
    case GuideRightBtnHighLight = "GuideRightBtnHighLight"
    case GuideWeightBg = "GuideWeightBg"
    case GuideWeightNiddle = "GuideWeightNiddle"
    case HomeBandMenu = "HomeBandMenu"
    case HomeDisBandMenu = "HomeDisBandMenu"
    case HomeLeftMenu = "HomeLeftMenu"
    case HomeListHonor = "HomeListHonor"
    case HomeListPK = "HomeListPK"
    case HomeListSleep = "HomeListSleep"
    case HomeListStep = "HomeListStep"
    case HomeNavLeftItem = "HomeNavLeftItem"
    case HomeNavRightItem = "HomeNavRightItem"
...
